--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -16,6 +17,7 @@ MarkupSafe==2.1.2
 packaging==23.0
 Pillow==9.4.0
 pyparsing==3.0.9
+python-dotenv==1.0.0
 requests==2.28.2
 SQLAlchemy==2.0.7
 tornado==6.2
