--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 packaging==23.0
 Pillow==9.4.0
+psycopg2==2.9.5
 pyparsing==3.0.9
 requests==2.28.2
 SQLAlchemy==2.0.7
